# market-monitor

./: pyproject.toml
market_monitor/app/: config.py  main.py
market_monitor/app/static/: app.js
