[project]
name = "market-monitor"
version = "0.1.0"
description = "Finance news monitoring and digest automation."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "feedparser==6.0.11",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "sqlalchemy==2.0.43",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[tool.vercel]
entrypoint = "market_monitor.app.main:app"
